@@ -2,6 +2,7 @@
  [Common]
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
  - Update Module::Install to 1.19 version.
+ - Update author name.
  - Update examples/ directory.
 
 0.06 2016-03-23T21:19:20+01:00
